--- a/LibrariesAndUtilities/ATACurriculumTctIntrospection/.gitignore
+++ b/LibrariesAndUtilities/ATACurriculumTctIntrospection/.gitignore
@@ -6,3 +6,9 @@
 /gradlew
 /gradlew.bat
 /wrapper/
+
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
