--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
 task buildZip(type: Zip) {
     from compileJava
     from processResources
+    into('./lib') {
+        from configurations.runtimeClasspath
+    }
 }
 
 checkstyle {
